Virtual gallery and contact section are looking good. See notes for next steps.
Add specifications upon hover for virtual gallery. Add physical gallery info.

--- a/index.html
+++ b/index.html
@@ -11,14 +11,10 @@
 </head>
 <body>
   <nav>
-    <div id="boxlogo">
-      <a href="#section1">
-        <img src="img/revised-Copper Accent Logo_Square.png" alt="">
-      </a>
-    </div>
     <ul>
-      <li><a href="#section2">Explore</a></li>
-      <li><a href="#section4">Purchase</a></li>
+      <li><a href="#section1">Home</a></li>
+      <li><a href="#section2">Gallery</a></li>
+      <li><a href="#section4">About</a></li>
       <li><a href="#section5">Contact</a></li>
     </ul>
   </nav>
@@ -31,33 +27,31 @@
   </div>
 
   <div id="section2">
-    <div class="imagecontainer1">
-      <div><img src="./img/QuailCactus.png" alt=""></div>
-      <div><img src="./img/back-img_7462.pngCopper-Pueblo-Sculpture.png" alt=""></div>
-      <div><img src="./img/PricklyPear.png" alt=""></div>
-      <div><img src="./img/back-img_7462.pngCopper-Mirror-Interior.png" alt=""></div>
-      <div><img src="./img/VineFrame.png" alt=""></div>
+    <div class="gallerycontainer">
+      <div class="galleryheader">
+      <h1>Virtual Gallery</h1>
+      <span>(hover/press for specifications)</span>
+      </div>
+      <div id="pueblo"><img src="./img/back-img_7462.pngCopper-Pueblo-Sculpture.png" alt=""></div>
+      <div id="quail"><img src="./img/QuailCactus.png"  alt=""></div>
+      <div id="copper-sheet-mirror"><img src="./img/back-img_7462.pngCopper-Mirror-Interior.png" alt=""></div>
+      <div id="pueblo-alt"><img src="img/pueblo-alt.jpeg" alt=""></div>
+      <div id="ivypoll"><img src="img/copper-vine.png" alt=""></div>
+      <div id="ivyframe"><img src="./img/VineFrame.png" alt=""></div>
+      <div id="owl"><img src="img/owl.jpeg" alt=""></div>
+      <div id="quail-only"><img src="img/quail-only.jpeg" alt=""></div>
+      <div id="coatrack"><img src="img/CoatRack.png" alt=""></div>
+      <div id="coatrackinaction"><img src="img/coatrackinaction .png" alt=""></div>
+      <div id="vinewhiteframe"><img src="img/VineWhiteFrameFull.png" alt=""></div>
+      <div id="vine"><img src="img/Vine.png" alt=""></div>
+      <div id="pricklypear"><img src="img/PricklyPear.png" alt=""></div>
     </div>
-    <div id="gallerybox1">
-      <h1>Locations</h1>
-      <ul>
-        <a href="https://www.amapola-gallery.com/" target="_blank">Amapola (Albuquerque)</a>
-        <a href="https://www.amapola-gallery.com/" target="_blank">Amapola</a>
-        <a href="https://www.amapola-gallery.com/" target="_blank">Amapola</a>
-        <span>For online and custom orders <br> <a href="#section5"><strong style="color: #336666;">contact</strong> </a></span>
-      </ul>
-    </div>
-    <div id="gallerybox2"><img src="img/coatrackinaction .png" alt=""></div>
-    <div id="gallerybox3"><img src="img/copper-vine.png" alt=""></div>
-    <div id="gallerybox4">
-      <h1>Featured In</h1>
-      <ul>
-        <a href="https://www.sandiaheightsartists.com/home" target="_blank">Sandia Heights</a>
-        <a href="https://www.abqsunport.com/sunport-arts-program/" target="_blank">Albuquerque Airport</a>
-        <a href="https://www.amapola-gallery.com/" target="_blank">Amapola</a>
-        <span>Want Copper Accent <br> in your exhibit? <br> <a href="#section5"><strong style="color: #336666;">contact</strong> </a></span>
-      </ul>
-    </div>
+    
+      <!-- <div id="gallerylogo"><img src="./img/hovered-Copper Accent Logo_Square.png" alt=""> -->
+        <!-- <span>"vine on pine mirror"</span> -->
+      <!-- </div> -->
+
+
   </div>
 
   <div id="section4">
@@ -98,8 +92,6 @@
         </div>
       </div>
     </div>
-
-
   </div>
 
   <footer>
@@ -112,5 +104,24 @@
 </html>
 
 
+<!-- <div id="boxlogo">
+  <a href="#section1">
+    <img src="img/revised-Copper Accent Logo_Square.png" alt="">
+  </a>
+</div> -->
+
+<!-- 
+<ul>
+  <a href="https://www.amapola-gallery.com/" target="_blank">Amapola (Albuquerque)</a>
+  <a href="https://www.amapola-gallery.com/" target="_blank">Amapola</a>
+  <a href="https://www.amapola-gallery.com/" target="_blank">Amapola</a>
+  <span>For online and custom orders <br> <a href="#section5"><strong style="color: #336666;">contact</strong> </a></span>
+</ul>
 
 
+<ul>
+  <a href="https://www.sandiaheightsartists.com/home" target="_blank">Sandia Heights</a>
+  <a href="https://www.abqsunport.com/sunport-arts-program/" target="_blank">Albuquerque Airport</a>
+  <a href="https://www.amapola-gallery.com/" target="_blank">Amapola</a>
+  <span>Want Copper Accent <br> in your exhibit? <br> <a href="#section5"><strong style="color: #336666;">contact</strong> </a></span>
+</ul> -->
