Hover effect added to gallery. Now awaiting content info to fill.

--- a/index.html
+++ b/index.html
@@ -32,19 +32,58 @@
       <h1>Virtual Gallery</h1>
       <span>(hover/press for specifications)</span>
       </div>
-      <div id="pueblo"><img src="./img/back-img_7462.pngCopper-Pueblo-Sculpture.png" alt=""></div>
-      <div id="quail"><img src="./img/QuailCactus.png"  alt=""></div>
-      <div id="copper-sheet-mirror"><img src="./img/back-img_7462.pngCopper-Mirror-Interior.png" alt=""></div>
-      <div id="pueblo-alt"><img src="img/pueblo-alt.jpeg" alt=""></div>
-      <div id="ivypoll"><img src="img/copper-vine.png" alt=""></div>
-      <div id="ivyframe"><img src="./img/VineFrame.png" alt=""></div>
-      <div id="owl"><img src="img/owl.jpeg" alt=""></div>
-      <div id="quail-only"><img src="img/quail-only.jpeg" alt=""></div>
-      <div id="coatrack"><img src="img/CoatRack.png" alt=""></div>
-      <div id="coatrackinaction"><img src="img/coatrackinaction .png" alt=""></div>
-      <div id="vinewhiteframe"><img src="img/VineWhiteFrameFull.png" alt=""></div>
-      <div id="vine"><img src="img/Vine.png" alt=""></div>
-      <div id="pricklypear"><img src="img/PricklyPear.png" alt=""></div>
+      <div id="pueblo" class="hovereffect">
+        <img class="blur" src="./img/back-img_7462.pngCopper-Pueblo-Sculpture.png" alt="">
+        <div class="content fade">"pueblo" <br> 20"W x 24"H</div>
+      </div>
+      <div id="quail" class="hovereffect">
+        <img class="blur" src="./img/QuailCactus.png"  alt="">
+        <div class="content fade">"pueblo" <br> 20"W x 24"H</div>
+      </div>
+      <div id="copper-sheet-mirror" class="hovereffect">
+        <img class="blur" src="./img/back-img_7462.pngCopper-Mirror-Interior.png" alt="">
+        <div class="content fade">"pueblo" <br> 20"W x 24"H</div>
+      </div>
+      <div id="pueblo-alt" class="hovereffect">
+        <img class="blur" src="img/pueblo-alt.jpeg" alt="">
+        <div class="content fade">"pueblo" <br> 20"W x 24"H</div>
+      </div>
+      <div id="ivypoll" class="hovereffect">
+        <img class="blur" src="img/copper-vine.png" alt="">
+        <div class="content fade">"pueblo" <br> 20"W x 24"H</div>
+      </div>
+      <div id="ivyframe" class="hovereffect">
+        <img class="blur" src="./img/VineFrame.png" alt="">
+        <div class="content fade">"pueblo" <br> 20"W x 24"H</div>
+      </div>
+      <div id="owl" class="hovereffect">
+        <img class="blur" src="img/owl.jpeg" alt="">
+        <div class="content fade">"pueblo" <br> 20"W x 24"H</div>
+      </div>
+      <div id="quail-only" class="hovereffect">
+        <img class="blur" src="img/quail-only.jpeg" alt="">
+        <div class="content fade">"pueblo" <br> 20"W x 24"H</div>
+      </div>
+      <div id="coatrack" class="hovereffect">
+        <img class="blur" src="img/CoatRack.png" alt="">
+        <div class="content fade">"pueblo" <br> 20"W x 24"H</div>
+      </div>
+      <div id="coatrackinaction" class="hovereffect">
+        <img class="blur" src="img/coatrackinaction .png" alt="">
+        <div class="content fade">"pueblo" <br> 20"W x 24"H</div>
+      </div>
+      <div id="vinewhiteframe" class="hovereffect">
+        <img class="blur" src="img/VineWhiteFrameFull.png" alt="">
+        <div class="content fade">"pueblo" <br> 20"W x 24"H</div>
+      </div>
+      <div id="vine" class="hovereffect">
+        <img class="blur" src="img/Vine.png" alt="">
+        <div class="content fade">"pueblo" <br> 20"W x 24"H</div>
+      </div>
+      <div id="pricklypear" class="hovereffect">
+        <img class="blur" src="img/PricklyPear.png" alt="">
+        <div class="content fade">"pueblo" <br> 20"W x 24"H</div>
+      </div>
     </div>
     
       <!-- <div id="gallerylogo"><img src="./img/hovered-Copper Accent Logo_Square.png" alt=""> -->
