--- a/index.html
+++ b/index.html
@@ -85,16 +85,55 @@
         <div class="content fade">"pueblo" <br> 20"W x 24"H</div>
       </div>
     </div>
-    
-      <!-- <div id="gallerylogo"><img src="./img/hovered-Copper Accent Logo_Square.png" alt=""> -->
-        <!-- <span>"vine on pine mirror"</span> -->
-      <!-- </div> -->
+  </div>
 
+  <div id="section3">
+    <h1>Featured In</h1>
+    <div class="featured">
+      <span>Sandia Heights</span>
+      <img src="./img/sandia-heights.png" alt="">
+    </div>
+    <div class="featured">
+      <span>Albuquerque Airport</span>
+      <img src="./img/airport.png" alt="">
+    </div>
+    <div class="featured">
+      <span>Mariposa</span>
+      <img src="./img/Mariposa.png" alt="">
+    </div>
 
   </div>
 
   <div id="section4">
+    <h1>ABOUT</h1>
+    <h1>Copper Accent LLC</h1>
+    <h2>Established in 2020</h2>
+    <h2>Rio Rancho, NM</h2>
+
+    <div class="mission"> <h4>Copper Accent's mission </h4> </div>
+
+    <div class="kurtintro">
+      <div class="text">
+        Kurt Wuerker is a lifetime hobbyist turned professional artist. <br>
+        <br>
+        <strong> How it Began </strong><br>
+With a hobby of making home furnishings from both wood and metal for the past several decades but too busy with a day job to allow pursuit of starting a business, retirement and a move to New Mexico in 2019 provided the opportunity to seriously consider turning a hobby into a business.
+<br>
+<br>
+The objective for this new business was to provide local, uniquely designed art that could easily fit in a southwestern home with an emphasis upon copper as a key element in the design.
+<br>
+<br>
+But the interest in working with copper began many years earlier back in the 1960s when I lived next to a church in Wisconsin that was having a copper steeple built. The builders left pieces of scrap copper in the parking lot, which I picked up and made a few simple items. That's how the interest began.
+<br>
+<br>
+Later, after high school, a job at a metal fabrication shop making custom industrial products fed my interest in metal work. After that, I worked in IT for a few decades from which I retired in 2019. But during that period in IT there were projects in my spare time involving the use of copper, such as this copper chimney enclosure at my previous home in 2016.
+      </div>
+      <div class="kurtimage"><img src="/img/kurt-photog.jpeg" alt=""></div>
+    </div>
   </div>
+
+
+
 
   <div id="section5">
     <h1>Contact</h1>
