Checking about section on mobile.

--- a/index.html
+++ b/index.html
@@ -70,11 +70,12 @@
       </div>
       <div id="coatrackinaction" class="hovereffect">
         <img class="blur" src="img/coatrackinaction .png" alt="">
-        <div class="content fade">"pueblo" <br> 20"W x 24"H</div>
+        <div class="content fade">This barn wood style mirror coat rack with copper accent pieces measures 18" x 24" on the outside edges. Keyhole mounting to firmly attach to wall. Copper is clear coated to preserve color.
+        </div>
       </div>
       <div id="vinewhiteframe" class="hovereffect">
         <img class="blur" src="img/VineWhiteFrameFull.png" alt="">
-        <div class="content fade">"pueblo" <br> 20"W x 24"H</div>
+        <div class="content fade">Pine frame with barnwood-style and crackled paint finish. Copper vine with leaves combine patina finish and glass enameling. Frame is intended to be hung at an angle so that no edge is exactly horizontal. Copper is clear coated to preserve color. Overall dimensions approx 36"w x 29"h.</div>
       </div>
       <div id="vine" class="hovereffect">
         <img class="blur" src="img/Vine.png" alt="">
@@ -109,26 +110,37 @@
     <h1>Copper Accent LLC</h1>
     <h2>Established in 2020</h2>
     <h2>Rio Rancho, NM</h2>
-
-    <div class="mission"> <h4>Copper Accent's mission </h4> </div>
+    <div class="mission"><h4>Copper Accent creates local, uniquely designed art that fits in a southwestern home with the use of copper as the key design element.</h4> </div>
 
     <div class="kurtintro">
-      <div class="text">
-        Kurt Wuerker is a lifetime hobbyist turned professional artist. <br>
+
+      <div class="intro">
+        <span><strong>Kurt Wuerker</strong> is a lifetime hobbyist turned professional artist.</span>
+        <div class="kurtimage"><img src="/img/kurt-photog.jpeg" alt=""></div>
         <br>
-        <strong> How it Began </strong><br>
-With a hobby of making home furnishings from both wood and metal for the past several decades but too busy with a day job to allow pursuit of starting a business, retirement and a move to New Mexico in 2019 provided the opportunity to seriously consider turning a hobby into a business.
-<br>
-<br>
-The objective for this new business was to provide local, uniquely designed art that could easily fit in a southwestern home with an emphasis upon copper as a key element in the design.
-<br>
-<br>
-But the interest in working with copper began many years earlier back in the 1960s when I lived next to a church in Wisconsin that was having a copper steeple built. The builders left pieces of scrap copper in the parking lot, which I picked up and made a few simple items. That's how the interest began.
-<br>
-<br>
-Later, after high school, a job at a metal fabrication shop making custom industrial products fed my interest in metal work. After that, I worked in IT for a few decades from which I retired in 2019. But during that period in IT there were projects in my spare time involving the use of copper, such as this copper chimney enclosure at my previous home in 2016.
       </div>
-      <div class="kurtimage"><img src="/img/kurt-photog.jpeg" alt=""></div>
+
+      <div class="began">
+        
+        <strong> How it Began </strong>
+        <br>
+        With a hobby of making home furnishings from both wood and metal for the past several decades but too busy with a day job to allow pursuit of starting a business, retirement and a move to New Mexico in 2019 provided the opportunity to seriously consider turning a hobby into a business.
+        <br>
+        <br>
+        The objective for this new business was to provide local, uniquely designed art that could easily fit in a southwestern home with an emphasis upon copper as a key element in the design.
+        <br>
+        <br>
+        But the interest in working with copper began many years earlier back in the 1960s when I lived next to a church in Wisconsin that was having a copper steeple built. The builders left pieces of scrap copper in the parking lot, which I picked up and made a few simple items. That's how the interest began.
+        <br>
+        <br>
+        Later, after high school, a job at a metal fabrication shop making custom industrial products fed my interest in metal work. After that, I worked in IT for a few decades from which I retired in 2019. But during that period in IT there were projects in my spare time involving the use of copper, such as this copper chimney enclosure at my previous home in 2016.
+      </div>
+
+      <div class="chimney">
+        <img src="img/ChimneyCap3.png" alt="">
+        <span>I have always enjoyed making unique projects that were not found in stores or online and knew others probably had the same desire to own something that was unique and didn't have the look of being mass-produced by someone far away who had no real connection to the final product or customer.</span>
+      </div> 
+
     </div>
   </div>
 
