--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <li><a href="#section1">Home</a></li>
       <li><a href="#section2">Gallery</a></li>
       <li><a href="#section4">About</a></li>
-      <li><a href="#section5">Contact</a></li>
+      <li><a href="#contact">Contact</a></li>
     </ul>
   </nav>
 
@@ -107,10 +107,10 @@
 
   <div id="section4">
     <h1>ABOUT</h1>
-    <h1>Copper Accent LLC</h1>
+    <h2>Copper Accent LLC</h2>
     <h2>Established in 2020</h2>
     <h2>Rio Rancho, NM</h2>
-    <div class="mission"><h4>Copper Accent creates local, uniquely designed art that fits in a southwestern home with the use of copper as the key design element.</h4> </div>
+    <div class="mission"><h4>Copper Accent creates local, uniquely designed art that fits in a southwestern home with the use of <em>copper</em> as the key design element.</h4> </div>
 
     <div class="kurtintro">
 
@@ -145,10 +145,24 @@
     </div>
   </div>
 
+  <div id="purchase">
+    
+    <ul class="purchaseinfo">
+      <h1>How to Purchase</h1>
+      <li>Visit <a href="https://www.amapola-gallery.com/">Amapola</a> in the Old Town district of Albuquerque. It is open seven days a week 10am-5pm. Inventory will vary, <a href="#contact">Contact</a> for inventory inquiries.</li>
+      <li>For orders by appointment, reach out with your request through the <a href="#contact">Contact</a> form or call/text at 262-914-6158.</li>
+      <li>For shipping or custom orders, kindly read the <a href="">FAQ</a> page then <a href="#contact">Contact</a>.</li>
+    </ul>
+  </div>
 
 
 
-  <div id="section5">
+  <div id="faq">
+    Still have questions? <br> Check out our <a href="">FAQ</a> page for specific information.
+  </div>
+
+
+  <div id="contact">
     <h1>Contact</h1>
     <div class="contactcontainer">
       <form class="formcontainer" action="https://formsubmit.co/wuerkerrs06@gmail.com" method="POST">
@@ -179,7 +193,6 @@
           <h4>Copper Accent, LLC</h4>
           <h4>Kurt Wuerker - Owner</h4>
           <h4>262-914-6158</h4>
-          <h4>Sales.copperaccent@gmail.com</h4>
         </div>
       </div>
     </div>
