Ready for first review

--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
 <body>
   <nav>
     <ul>
-      <li><a href="#section1">Home</a></li>
+      <li><a href="#section1"><img src="./img/revised-Copper Accent Logo_Square.png" alt=""></a></li>
       <li><a href="#section2">Gallery</a></li>
       <li><a href="#section4">About</a></li>
+      <li><a href="#purchase">Purchase</a></li>
       <li><a href="#contact">Contact</a></li>
     </ul>
   </nav>
@@ -107,9 +108,11 @@
 
   <div id="section4">
     <h1>ABOUT</h1>
-    <h2>Copper Accent LLC</h2>
-    <h2>Established in 2020</h2>
-    <h2>Rio Rancho, NM</h2>
+    <div class="quickabout">
+      <h2>Copper Accent LLC</h2>
+      <h3>Established in 2020</h3>
+      <h3>Rio Rancho, NM</h3>
+    </div>
     <div class="mission"><h4>Copper Accent creates local, uniquely designed art that fits in a southwestern home with the use of <em>copper</em> as the key design element.</h4> </div>
 
     <div class="kurtintro">
@@ -131,24 +134,23 @@
         The objective for this new business was to provide local, uniquely designed art that could easily fit in a southwestern home with an emphasis upon copper as a key element in the design.
         <br>
         <br>
-        But the interest in working with copper began many years earlier back in the 1960s when I lived next to a church in Wisconsin that was having a copper steeple built. The builders left pieces of scrap copper in the parking lot, which I picked up and made a few simple items. That's how the interest began.
+        But the interest in working with copper began many years earlier back in the 1960s when he lived next to a church in Wisconsin that was having a copper steeple built. The builders left pieces of scrap copper in the parking lot, which he picked up and made a few simple items. That's how the interest began.
         <br>
         <br>
-        Later, after high school, a job at a metal fabrication shop making custom industrial products fed my interest in metal work. After that, I worked in IT for a few decades from which I retired in 2019. But during that period in IT there were projects in my spare time involving the use of copper, such as this copper chimney enclosure at my previous home in 2016.
+        Later, after high school, a job at a metal fabrication shop making custom industrial products fed his interest in metal work. After that, he worked in IT for a few decades from which he retired in 2019. But during that period in IT there were projects in my spare time involving the use of copper, such as this copper chimney enclosure at my previous home in 2016.
       </div>
 
       <div class="chimney">
         <img src="img/ChimneyCap3.png" alt="">
-        <span>I have always enjoyed making unique projects that were not found in stores or online and knew others probably had the same desire to own something that was unique and didn't have the look of being mass-produced by someone far away who had no real connection to the final product or customer.</span>
+        <span>"I have always enjoyed making unique projects that were not found in stores or online and knew others probably had the same desire to own something that was unique and didn't have the look of being mass-produced by someone far away who had no real connection to the final product or customer." - Kurt</span>
       </div> 
 
     </div>
   </div>
 
   <div id="purchase">
-    
+    <h1>How to Purchase</h1>
     <ul class="purchaseinfo">
-      <h1>How to Purchase</h1>
       <li>Visit <a href="https://www.amapola-gallery.com/">Amapola</a> in the Old Town district of Albuquerque. It is open seven days a week 10am-5pm. Inventory will vary, <a href="#contact">Contact</a> for inventory inquiries.</li>
       <li>For orders by appointment, reach out with your request through the <a href="#contact">Contact</a> form or call/text at 262-914-6158.</li>
       <li>For shipping or custom orders, kindly read the <a href="">FAQ</a> page then <a href="#contact">Contact</a>.</li>
